--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,7 +15,41 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-$stable: #00FFCC;
+//$stable: #886aea;
+///$postitive: #853385;
+
+.pane{
+  background-image: url("styles/amanda2.jpg");
+  background-repeat: no-repeat;
+  position: center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+}
+
+.button-block{
+  width: 100%;
+  display: block;
+}
+
+.buffer-top{
+  height: 100px;
+}
+
+label.no-border{
+  border: none;
+}
+label.item-input{
+  background-color: rgba(211,211,211,.5);
+  color:white
+}
+span{
+  color:white;
+}
+.text-color {
+  color: white;
+  //text-shadow: -2px 0 grey, 0 2px grey, 2px 0 grey, 0 -2px grey;
+}
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
