--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,28 +1,76 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Dashboard" class="pane">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+
+      <div class="buffer-top">
+
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
+
+      <div class="list padding-top">
+          <label class="item item-input item-floating-label">
+              <span class="input-label text color">Email</span>
+              <input class="text-color" type="text" placeholder="Email">
+          </label>
+
+          </br>
+
+          <label class="item item-input item-floating-label">
+              <span class="input-label">Password</span>
+              <input type="text" placeholder="Password">
+          </label>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
-      </div>
+
+      <button class="button button-block button-energized">
+          Signup!
+      </button>
+          
+        <div class="row">
+
+          <div class= "col">
+              <button class="button button-positive button-block">
+                  Facebook
+              </button>
+          </div>
+
+          
+          <div class= "col">
+              <button class="button button-assertive button-block">
+                  Google+
+              </button>
+          </div>
+              
+          
+          <div class= "col">
+              <button class="button button-calm button-block">
+                  Twitter
+              </button>
+          </div>
     </div>
   </ion-content>
 </ion-view>
+
+<!--    <div class="list card">-->
+<!--      -->
+<!--      <div class="item item-divider">Recent Updates</div>-->
+<!--      -->
+<!--      <div class="item item-body">-->
+<!--        <div>-->
+<!--          There is a fire in <b>sector 3</b>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="list card">-->
+<!--      <div class="item item-divider">Health</div>-->
+<!--      <div class="item item-body">-->
+<!--        <div>-->
+<!--          You ate an apple today!-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="list card">-->
+<!--      <div class="item item-divider">Upcoming</div>-->
+<!--      <div class="item item-body">-->
+<!--        <div>-->
+<!--          You have <b>29</b> meetings on your calendar tomorrow.-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
