--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -47,7 +47,7 @@ span{
   color:white;
 }
 .text-color {
-  color: white;
+  color: white !important;
   //text-shadow: -2px 0 grey, 0 2px grey, 2px 0 grey, 0 -2px grey;
 }
 
