--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -7,14 +7,14 @@
 
       <div class="list padding-top">
           <label class="item item-input item-floating-label">
-              <span class="input-label text color">Email</span>
+              <span class="input-label text-color">Email</span>
               <input class="text-color" type="text" placeholder="Email">
           </label>
 
           </br>
 
           <label class="item item-input item-floating-label">
-              <span class="input-label">Password</span>
+              <span class="input-label text-color">Password</span>
               <input type="text" placeholder="Password">
           </label>
       </div>
