--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -19,7 +19,7 @@
             </label>
         </div>
 
-        <button class="button button-block button-energized" ng-click="login()">
+        <button class="button button-block button-energized" ng-click="signIn(user)">
             Signup!
         </button>
 
