--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -5,18 +5,25 @@
 
         </div>
 
-        <div class="list padding-top">
-            <label class="item item-input item-floating-label">
-                <span class="input-label text-color">Email</span>
+        <div>
+            <div class="buffer-left"></div>
+            <div><h2 class="title">ePic</h2></div>
+            <div></div>
+        </div>
+
+
+        <div class="buffer-top">
+
+        </div>
+        <div class="list padding top">
+            <label class="item item-input">
                 <input class="text-color" type="text" placeholder="Email" ng-model="data.username">
             </label>
-
             </br>
-
-            <label class="item item-input item-floating-label">
-                <span class="input-label text-color">Password</span>
+            <label class="item item-input">
                 <input type="text" placeholder="Password" ng-model="data.password">
             </label>
+
         </div>
 
         <button class="button button-block button-energized" ng-click="signIn(user)">
