--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,15 +15,16 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-//$stable: #886aea;
+//$stable: transparent;
 ///$postitive: #853385;
 
 body{
-  background-color: yellow !important;
+  //background-color: yellow !important;
+  color: #ffffff !important;
 }
 
 .pane{
-  background-image: url("styles/amanda2.jpg");
+  background-image: url("styles/starscopy2.jpg");
   background-repeat: no-repeat;
   position: center center fixed;
   -webkit-background-size: cover;
@@ -31,28 +32,39 @@ body{
   background-size: cover;
 }
 
-.dash-pane{
-  background-color: green;
-}
-
 .button-block{
   width: 100%;
   display: block;
 }
 
+h2{
+  color: white !important;
+
+}
+.title{
+  margin-left: 42%;
+}
+
 .buffer-top{
-  height: 100px;
+  height: 50px;
 }
 
 label.no-border{
   border: none;
 }
 label.item-input{
-  background-color: rgba(211,211,211,.5);
-  color:white
+  background-color: rgba(28,61,113,.65);
+  //-moz-box-shadow:    2px 2px 2px 2px rgba(211, 211, 211, .6);
+  -webkit-box-shadow: 1px 1px 1px 1px rgba(211, 211, 211, .5);
+  //box-shadow:         2px 2px 2px 2px lightgrey;
+  color: white !important;
+
+}
+input{
+  color: #ffffff !important;
 }
 span{
-  color:white;
+  color: white;
 }
 .text-color {
   color: white !important;
