--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,32 +1,41 @@
-<ion-view view-title="Dashboard" class="dash-pane">
+<ion-view view-title="Dashboard" name="dash" class="dash-pane">
   <ion-content class="padding">
 
       <div class="list card">
 
-          <div class="item item-divider">Recent Updates</div>
+          <div class="item item-divider"></br>
+              This Could Be Your Next Collage:
+              <br></br>
+          </div>
 
           <div class="item item-body">
+              <div class="left-buffer"></div>
               <div>
-                  There is a fire in <b>sector 3</b>
+                  <img src="./../css/styles/four.jpg"/>
               </div>
+              <button class="button button-block button-energized" ng-click="">Save this Collage</button>
+              <div class="left-buffer"></div><p>or edit this collage</p>
           </div>
       </div>
-      <div class="list card">
-          <div class="item item-divider">Health</div>
-          <div class="item item-body">
-              <div>
-                  You ate an apple today!
-              </div>
-          </div>
-      </div>
-      <div class="list card">
-          <div class="item item-divider">Upcoming</div>
-          <div class="item item-body">
-              <div>
-                  You have <b>29</b> meetings on your calendar tomorrow.
-              </div>
-          </div>
-      </div>
+
+      <div></div>
+      <button class="button button-block button-calm" >OR CREATE YOUR OWN!</button>
+      <!--<div class="list card">-->
+          <!--<div class="item item-divider">Health</div>-->
+          <!--<div class="item item-body">-->
+              <!--<div>-->
+                  <!--You ate an apple today!-->
+              <!--</div>-->
+          <!--</div>-->
+      <!--</div>-->
+      <!--<div class="list card">-->
+          <!--<div class="item item-divider">Upcoming</div>-->
+          <!--<div class="item item-body">-->
+              <!--<div>-->
+                  <!--You have <b>29</b> meetings on your calendar tomorrow.-->
+              <!--</div>-->
+          <!--</div>-->
+      <!--</div>-->
 
 
 
