--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,22 +15,26 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-//$stable: transparent;
-///$postitive: #853385;
 
 body{
-  //background-color: yellow !important;
-  color: #ffffff !important;
+  background-color: grey !important;
+  //color: #ffffff !important;
+}
+.dash-pane{
+  background: black !important;
 }
 
 .pane{
-  background-image: url("styles/starscopy2.jpg");
+  //background-color: #f5f5f5 !important;
+  background: url("styles/darksky2.jpg");
   background-repeat: no-repeat;
   position: center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
 }
+
+
 
 .button-block{
   width: 100%;
@@ -49,6 +53,11 @@ h2{
   height: 50px;
 }
 
+.item.item-divider {
+  background: url("styles/darksky2.jpg");
+  color: white !important;
+
+}
 label.no-border{
   border: none;
 }
@@ -65,6 +74,12 @@ input{
 }
 span{
   color: white;
+}
+
+img{
+  height: 300px;
+  width: 300px;
+  position: center center fixed;
 }
 .text-color {
   color: white !important;
