--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -8,7 +8,7 @@ navigation history that also transitions its views in and out.
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+    <ion-nav-view name="tab-dash">Status</ion-nav-view>
   </ion-tab>
 
 
