this adds photos with dummy data working on connecting it to my api

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -46,7 +46,7 @@
 
 
             <div class= "col">
-                <button ng-click="Instagram" class="button button-energized button-block">
+                <button ng-click="instaSignin(user)" class="button button-energized button-block">
                     Instagram
                 </button>
             </div>
