--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -22,6 +22,10 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
+  <!--Photos Tab-->
+  <ion-tab title="Photos" icon-off="ion-ios7-photo-outline" icon-on="ion-ios7-photo" href="#/tab/photos">
+    <ion-nav-view name="tab-photos"></ion-nav-view>
+  </ion-tab>
 
   <!-- Account Tab -->
   <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
