--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -34,6 +34,11 @@ body{
   background-size: cover;
 }
 
+.card-buffer{
+  height: 50px;
+  background-color: black !important;
+}
+
 
 
 .button-block{
