--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Account">
   <ion-content>
     <ion-list>
-      <ion-item class="item-avatar" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/account/{{photo.id}}">
+      <ion-item class="item-avatar" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/account/">
         <img ng-src="{{photo.filepath}}">
         <h2>{{photo.description}}</h2>
       </ion-item>
@@ -18,13 +18,6 @@
       <!--</ion-item>-->
     <!--</ion-list>-->
 
-    <!--.controller('PhotosCtrl', ['$http', function($http) {-->
-    <!--var starter = this;-->
-    <!--starter.photos = [];-->
-    <!--$http.get('http://clouie.ca/uploads/').success(function (data) {-->
-    <!--starter.photos = data-->
-    <!--});-->
-    <!--}])()-->
 
   </ion-content>
 </ion-view>
