--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -36,9 +36,6 @@ body {
   width: 100%;
   display: block; }
 
-h2 {
-  color: white !important; }
-
 .title {
   margin-left: 42%; }
 
@@ -60,12 +57,8 @@ label.item-input {
 input {
   color: #ffffff !important; }
 
-span {
-  color: white; }
-
 img {
-  height: 300px;
-  width: 300px;
+  max-height: 300px;
   position: center center fixed; }
 
 .text-color {
