--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -8,7 +8,7 @@ navigation history that also transitions its views in and out.
 
   <!-- Dashboard Tab -->
   <ion-tab title="Status" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash">Status</ion-nav-view>
+    <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
 
@@ -23,7 +23,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!--Photos Tab-->
-  <ion-tab title="Photos" icon-off="ion-ios7-photo-outline" icon-on="ion-ios7-photo" href="#/tab/photos">
+  <ion-tab title="Photos" icon-off="ion-ios7-camera-outline" icon-on="ion-ios7-camera" href="#/tab/photos">
     <ion-nav-view name="tab-photos"></ion-nav-view>
   </ion-tab>
 
