--- a/www/templates/photo-create.html
+++ b/www/templates/photo-create.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     <div class = "right">
-      <a id= "addPhotos" class="button button-icon icon ion-settings" ng-click="modal.show()"></a>
+      <a id= "addPhotos" class="button button-icon icon ion-settings" href="#/tab/add/photo"></a>
       <br>
 
       <a class="button button-icon icon ion-plus-circled"></a>
