--- a/www/templates/add-photos.html
+++ b/www/templates/add-photos.html
@@ -1,30 +1,13 @@
-<ion-view view-title="Photos">
+<ion-view view-title="Add Photos" class="dash-pane">
     <ion-content>
-        <div class="container">
+            <ion-item class="item-light left" style="padding: 3px !important" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/photo/{{photo.description}}">
 
-            <div class="list card" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/photo/{{photo.id}}">
-
-                <div class="item item-avatar">
-                    <img src="avatar.jpg">
-                    <h2>{{photo.username}}</h2>
-                    <p></p>
+                <div class="item item-thumbnail" style="padding: 0">
+                    <img class="thumbnail" ng-src="http://clouie.ca/{{photo.filepath}}"/>
                 </div>
 
-                <div class="item item-image">
-                    <img ng-src="http://clouie.ca/{{photo.filepath}}"/>
-                </div>
+            </ion-item>
 
-                <div class="item item-divider">
-                    <img src="avatar.jpg">
-                    <h2>{{photo.description}}</h2>
-                    <p></p>
-                </div>
-
-                <div>
-                    <p>{{photo.description}}</p>
-                </div>
-            </div>
-        </div>
     </ion-content>
 </ion-view>
 
