trying to link my login to api

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -75,6 +75,10 @@ body{
   background-color: black !important;
 }
 
+input.inputText{
+  color: black;
+}
+
 
 
 .button-block{
@@ -112,7 +116,7 @@ label.item-input{
 
 }
 input{
-  color: #ffffff !important;
+//  color: #ffffff !important;
 }
 
 
