--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,51 +3,51 @@
 
       <div class="list card">
 
-          <div class="item item-divider"></br>
-              This Could Be Your Next Collage:
-              <br></br>
-          </div>
+          <!--<div class="item item-divider"></br>-->
+              <!--This Could Be Your Next Collage:-->
+              <!--<br></br>-->
+          <!--</div>-->
 
-          <ion-slide-box on-slide-changed="slideHasChanged($index)">
-              <ion-slide>
-                  <div class="box blue">
-                  <div class="item item-body">
-                      <div class="left-buffer"></div>
-                      <div class="row">
-                          <img ng-src="http://clouie.ca/uploads/four_1424265083572.jpg"/>
-                          <p style="color:transparent">alskd</p>
-                          <div>
-                              <div style="height: 146px"></div>
-                              <i class="icon ion-chevron-right"></i>
-                          </div>
-                      </div>
-                  </div>
-                      <div style="height: 60px"></div>
-                  </div>
-              </ion-slide>
+          <!--<ion-slide-box on-slide-changed="slideHasChanged($index)">-->
+              <!--<ion-slide>-->
+                  <!--<div class="box blue">-->
+                  <!--<div class="item item-body">-->
+                      <!--<div class="left-buffer"></div>-->
+                      <!--<div class="row">-->
+                          <!--<img ng-src="http://clouie.ca/uploads/four_1424265083572.jpg"/>-->
+                          <!--<p style="color:transparent">alskd</p>-->
+                          <!--<div>-->
+                              <!--<div style="height: 146px"></div>-->
+                              <!--<i class="icon ion-chevron-right"></i>-->
+                          <!--</div>-->
+                      <!--</div>-->
+                  <!--</div>-->
+                      <!--<div style="height: 60px"></div>-->
+                  <!--</div>-->
+              <!--</ion-slide>-->
 
-              <ion-slide>
-                  <div class="box yellow">
-                      <div class="item item-body">
-                          <div class="left-buffer"></div>
-                          <div class="row">
-                              <img ng-src="http://clouie.ca/uploads/faye-copy_1424313676094.jpg"/>
-                              <p style="color:transparent">alskd</p>
-                              <div>
-                                  <div style="height: 146px"></div>
-                                  <i class="icon ion-chevron-right"></i>
-                              </div>
-                          </div>
-                      </div>
-                      <div style="height: 60px"></div>
-                  </div>
-              </ion-slide>
+              <!--<ion-slide>-->
+                  <!--<div class="box yellow">-->
+                      <!--<div class="item item-body">-->
+                          <!--<div class="left-buffer"></div>-->
+                          <!--<div class="row">-->
+                              <!--<img ng-src="http://clouie.ca/uploads/faye-copy_1424313676094.jpg"/>-->
+                              <!--<p style="color:transparent">alskd</p>-->
+                              <!--<div>-->
+                                  <!--<div style="height: 146px"></div>-->
+                                  <!--<i class="icon ion-chevron-right"></i>-->
+                              <!--</div>-->
+                          <!--</div>-->
+                      <!--</div>-->
+                      <!--<div style="height: 60px"></div>-->
+                  <!--</div>-->
+              <!--</ion-slide>-->
 
-              <ion-slide>
-                  <div class="box pink"><h1>PINK</h1></div>
-              </ion-slide>
+              <!--<ion-slide>-->
+                  <!--<div class="box pink"><h1>PINK</h1></div>-->
+              <!--</ion-slide>-->
 
-          </ion-slide-box>
+          <!--</ion-slide-box>-->
 
           <!--<div class="item item-body">-->
               <!--<div class="left-buffer"></div>-->
