--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -49,6 +49,9 @@ body {
   height: 50px;
   background-color: black !important; }
 
+input.inputText {
+  color: black; }
+
 .button-block {
   width: 100%;
   display: block; }
@@ -70,9 +73,6 @@ label.item-input {
   background-color: rgba(28, 61, 113, 0.65);
   -webkit-box-shadow: 1px 1px 1px 1px rgba(211, 211, 211, 0.5);
   color: white !important; }
-
-input {
-  color: #ffffff !important; }
 
 img {
   max-height: 300px;
