got my phone to take pictures now want to send it to api

--- a/www/templates/add-photos.html
+++ b/www/templates/add-photos.html
@@ -11,12 +11,12 @@
 
             </ion-item>
 
-        <ion-item class="item-light left" style="padding: 4px !important; bottom: 0"  type="item-text-wrap" href="">
+        <!--<ion-item class="item-light left" style="padding: 4px !important; bottom: 0"  type="item-text-wrap" href="">-->
 
-            <div class="item item-thumbnail"  ng-controller="NewPhotoCtrl" ng-click="showAddPhoto()" style="padding: 0">
-                <img class="thumbnail" ng-src="./css/styles/amanda2.jpg"/>
-            </div>
-        </ion-item>
+            <!--<div class="item item-thumbnail"  ng-controller="NewPhotoCtrl" ng-click="showAddPhoto()" style="padding: 0">-->
+                <!--<img class="thumbnail" ng-src="http://images.wikia.com/clubpenguin/images/6/6c/Add_image_icon.svg"/>-->
+            <!--</div>-->
+        <!--</ion-item>-->
 
     </ion-content>
 </ion-view>
