--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -17,14 +17,19 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
-  <!-- Friends Tab -->
-  <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
+  <!--&lt;!&ndash; Friends Tab &ndash;&gt;-->
+  <!--<ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">-->
+    <!--<ion-nav-view name="tab-friends"></ion-nav-view>-->
+  <!--</ion-tab>-->
 
   <!--Photos Tab-->
   <ion-tab title="Photos" icon-off="ion-ios7-camera-outline" icon-on="ion-ios7-camera" href="#/tab/photos">
     <ion-nav-view name="tab-photos"></ion-nav-view>
+  </ion-tab>
+
+  <!--Camera Tab -->
+  <ion-tab title="Camera" icon-off="ion-ios7-camera-outline" icon-on="ion-ios7-camera" href="#/tab/camera">
+    <ion-nav-view name="tab-camera"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
