finally figuring out angular services with Photos'

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -28,6 +28,11 @@ body {
 .dash-pane {
   background: black !important; }
 
+.container {
+  width: 600px;
+  height: 600px;
+  color: white; }
+
 .right {
   float: right;
   margin-top: 10%; }
