--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -47,6 +47,13 @@ body{
   background: black !important;
 }
 
+.container{
+  width: 600px;
+  height: 600px;
+  color: white;
+
+}
+
 .right{
   float: right;
   margin-top: 10%;
