--- a/www/templates/add-photos.html
+++ b/www/templates/add-photos.html
@@ -2,21 +2,22 @@
     <ion-content>
 
 
-            <ion-item class="item-light left" style="padding: 3px !important" ng-controller="AddPhotosCtrl" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/photo/{{photo.description}}">
+            <ion-item class="item-light left" style="padding: 3px !important" ng-controller="AddPhotosCtrl" ng-repeat="photo in photos" type="item-text-wrap" href="#/tab/photo/{{photo.id}}" >
 
 
                 <div class="item item-thumbnail" style="padding: 0">
                     <img class="thumbnail" ng-src="http://clouie.ca/{{photo.filepath}}"/>
+                    <div>{{photo.id}} photo.id</div>
                 </div>
 
             </ion-item>
 
-        <!--<ion-item class="item-light left" style="padding: 4px !important; bottom: 0"  type="item-text-wrap" href="">-->
+        <ion-item class="item-light left" style="padding: 4px !important; bottom: 0"  type="item-text-wrap" href="">
 
-            <!--<div class="item item-thumbnail"  ng-controller="NewPhotoCtrl" ng-click="showAddPhoto()" style="padding: 0">-->
-                <!--<img class="thumbnail" ng-src="http://images.wikia.com/clubpenguin/images/6/6c/Add_image_icon.svg"/>-->
-            <!--</div>-->
-        <!--</ion-item>-->
+            <div class="item item-thumbnail"  ng-controller="NewPhotoCtrl" ng-click="showAddPhoto()" style="padding: 0">
+                <img class="thumbnail" ng-src={{imageURI}} />
+            </div>
+        </ion-item>
 
     </ion-content>
 </ion-view>
