--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -5,6 +5,12 @@
         <img ng-src="{{friend.face}}">
         <h2>{{friend.name}}</h2>
       </ion-item>
+      <ion-item class="item-light left" style="padding: 4px !important; bottom: 0"  type="item-text-wrap" href="#/tab/friend/new">
+
+          <div class="item item-thumbnail"  style="padding: 0" >
+            <button >ADD FRIEND</button>
+          </div>
+        </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
