--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,15 +12,15 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
 
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
-
-  <!--&lt;!&ndash; Friends Tab &ndash;&gt;-->
-  <!--<ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">-->
-    <!--<ion-nav-view name="tab-friends"></ion-nav-view>-->
+  <!--&lt;!&ndash; Chats Tab &ndash;&gt;-->
+  <!--<ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">-->
+    <!--<ion-nav-view name="tab-chats"></ion-nav-view>-->
   <!--</ion-tab>-->
+
+  <!-- Friends Tab -->
+  <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
+    <ion-nav-view name="tab-friends"></ion-nav-view>
+  </ion-tab>
 
   <!--Photos Tab-->
   <ion-tab title="Photos" icon-off="ion-ios7-camera-outline" icon-on="ion-ios7-camera" href="#/tab/photos">
