got posts posting

--- a/www/templates/add-photos.html
+++ b/www/templates/add-photos.html
@@ -7,7 +7,7 @@
 
                 <div class="item item-thumbnail" style="padding: 0">
                     <img class="thumbnail" ng-src="http://clouie.ca/{{photo.filepath}}"/>
-                    <div>{{photo.id}} photo.id</div>
+                    <!--<div>{{photo.id}} photo.id</div>-->
                 </div>
 
             </ion-item>
