--- a/www/templates/photo-detail.html
+++ b/www/templates/photo-detail.html
@@ -8,7 +8,7 @@
   <ion-content class="padding">
 
     <div class="card">
-      <div class="item item-body" ng-show="photo" type="item-text-wrap">
+      <div class="item item-body" ng-show="photo" header="photo.description" type="item-text-wrap">
         <div>
           <h3>{{photo.album_id}}</h3></br>
         </div>
